# LearnOpenGL

./: CMakeLists.txt  hello_triangle.cpp  main.cpp  shader.fs  snake_game_3d.cpp  snake_game_3d_main.cpp
helpers/: CMakeLists.txt  camera.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
snake_game_3d/: CMakeLists.txt  QuadTree.hpp  enums.hpp  snake_game_3d.cpp  snake_game_3d.hpp  snake_game_ai.cpp  snake_game_ai.hpp
